readme수정, createNPMPackage.sh에 0.63만 지원하도록 수정(패키지사이즈줄이기)